<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#253334"
    tools:context=".Login">

    <ImageView
        android:layout_width="53dp"
        android:layout_height="59dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/ic_logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="130dp"
        android:text="@string/title_signIn"
        android:textColor="@color/white"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/login_emailInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:backgroundTint="@color/white"
            android:hint="@string/title_email"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/login_passInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="32dp"
            android:layout_marginRight="35dp"
            android:backgroundTint="@color/white"
            android:hint="@string/title_pass"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login_signButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginLeft="27dp"
            android:layout_marginTop="55dp"
            android:layout_marginRight="27dp"
            android:background="@drawable/login_background"
            android:padding="16dp"
            android:text="@string/title_signIn"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="27dp"
            android:layout_marginTop="23dp"
            android:text="@string/title_register"
            android:textColor="@color/white" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login_profileButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginLeft="27dp"
            android:layout_marginTop="23dp"
            android:layout_marginRight="27dp"
            android:background="@drawable/login_background"
            android:padding="16dp"
            android:text="@string/title_profile"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="25sp" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:scaleType="fitXY"
        android:src="@drawable/login_back" />

</FrameLayout>